[gd_scene load_steps=4 format=3 uid="uid://68su2xs0crgu"]

[ext_resource type="Theme" uid="uid://crdqpfrvvr1aj" path="res://scenes/themes/title_menu_button.tres" id="1_1l4sf"]
[ext_resource type="Script" path="res://scripts/main_menu_comp/button.gd" id="2_sbmqy"]
[ext_resource type="Texture2D" uid="uid://bwv65dqnulres" path="res://graphics/main_menu/prompt_hover.png" id="2_tafd6"]

[node name="Button" type="Button"]
size_flags_horizontal = 4
theme = ExtResource("1_1l4sf")
text = "asdasdasdasdasd"
script = ExtResource("2_sbmqy")

[node name="HoverLeft" type="Sprite2D" parent="."]
visible = false
position = Vector2(-20, 6)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_tafd6")

[node name="HoverRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(219, 6)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_tafd6")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
